// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders main branch 1`] = `
<li
  key="branch-master"
  onMouseEnter={[Function]}
>
  <Link
    className="navbar-context-meta-branch-menu-item"
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "/dashboard",
        "query": Object {
          "id": "component",
        },
      }
    }
  >
    <Tooltip
      mouseEnterDelay={0.5}
      overlay="master"
      placement="left"
    >
      <div
        className="navbar-context-meta-branch-menu-item-name text-ellipsis"
      >
        <BranchIcon
          branchLike={
            Object {
              "isMain": true,
              "name": "master",
            }
          }
          className="little-spacer-right"
        />
        master
        <div
          className="outline-badge spacer-left"
        >
          branches.main_branch
        </div>
      </div>
    </Tooltip>
    <div
      className="big-spacer-left note"
    >
      <BranchStatus
        branchLike={
          Object {
            "isMain": true,
            "name": "master",
          }
        }
        concise={true}
      />
    </div>
  </Link>
</li>
`;

exports[`renders short-living branch 1`] = `
<li
  key="branch-foo"
  onMouseEnter={[Function]}
>
  <Link
    className="navbar-context-meta-branch-menu-item"
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "/project/issues",
        "query": Object {
          "branch": "foo",
          "id": "component",
          "resolved": "false",
        },
      }
    }
  >
    <Tooltip
      mouseEnterDelay={0.5}
      overlay="foo"
      placement="left"
    >
      <div
        className="navbar-context-meta-branch-menu-item-name text-ellipsis"
      >
        <BranchIcon
          branchLike={
            Object {
              "isMain": false,
              "mergeBranch": "master",
              "name": "foo",
              "status": Object {
                "bugs": 1,
                "codeSmells": 2,
                "qualityGateStatus": "ERROR",
                "vulnerabilities": 3,
              },
              "type": "SHORT",
            }
          }
          className="little-spacer-right big-spacer-left"
        />
        foo
      </div>
    </Tooltip>
    <div
      className="big-spacer-left note"
    >
      <BranchStatus
        branchLike={
          Object {
            "isMain": false,
            "mergeBranch": "master",
            "name": "foo",
            "status": Object {
              "bugs": 1,
              "codeSmells": 2,
              "qualityGateStatus": "ERROR",
              "vulnerabilities": 3,
            },
            "type": "SHORT",
          }
        }
        concise={true}
      />
    </div>
  </Link>
</li>
`;

exports[`renders short-living orhpan branch 1`] = `
<li
  key="branch-foo"
  onMouseEnter={[Function]}
>
  <Link
    className="navbar-context-meta-branch-menu-item"
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "/project/issues",
        "query": Object {
          "branch": "foo",
          "id": "component",
          "resolved": "false",
        },
      }
    }
  >
    <Tooltip
      mouseEnterDelay={0.5}
      overlay="foo"
      placement="left"
    >
      <div
        className="navbar-context-meta-branch-menu-item-name text-ellipsis"
      >
        <BranchIcon
          branchLike={
            Object {
              "isMain": false,
              "isOrphan": true,
              "mergeBranch": "master",
              "name": "foo",
              "status": Object {
                "bugs": 1,
                "codeSmells": 2,
                "qualityGateStatus": "ERROR",
                "vulnerabilities": 3,
              },
              "type": "SHORT",
            }
          }
          className="little-spacer-right"
        />
        foo
      </div>
    </Tooltip>
    <div
      className="big-spacer-left note"
    >
      <BranchStatus
        branchLike={
          Object {
            "isMain": false,
            "isOrphan": true,
            "mergeBranch": "master",
            "name": "foo",
            "status": Object {
              "bugs": 1,
              "codeSmells": 2,
              "qualityGateStatus": "ERROR",
              "vulnerabilities": 3,
            },
            "type": "SHORT",
          }
        }
        concise={true}
      />
    </div>
  </Link>
</li>
`;
